--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "connect-ensure-login": "^0.1.1",
     "core-js": "^3.27.2",
     "express": "^4.17.1",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.3",
     "google-auth-library": "^8.7.0",
     "jwt-decode": "^3.1.2",
+    "mongodb": "^6.3.0",
     "mongoose": "^6.9.0",
     "nodemon": "^2.0.6",
     "react": "^18.2.0",
