--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jwt-decode": "^3.1.2",
     "mongodb": "^6.3.0",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
