--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 SESSION_SECRET="session-secret"
-MONGO_SRV="mongodb+srv://abayojosephdesire:STASZyjDIwzaEtfx@cluster0.e4jk6ld.mongodb.net/?retryWrites=true&w=majority"
+MONGO_SRV=""
 
 Copy the values from this .env.example file and paste them into the .env file.
 Replace the values with your own and remove this comment.
